[tool.poetry]
name = "random-dependencies"
version = "1.0.0"
description = "A bunch of random dependencies"
authors = ["Albert Wibowo <albert14wibowo@duck.com>"]
repository = "https://github.com/albertwibowo/poetry-poc"

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = { version = "3.8.5", extras = ["speedups"] }
aiomcache = "0.8.1"
asyncpg = "0.28.0"
boto3 = "1.24.56"
datadog = "0.47.0"
ddtrace = "1.20.1"
dill = "0.3.7"
fastapi = "0.103.1"
gunicorn = "20.1.0"
matplotlib = "3.7.1"
numpy = "1.23.5"
pandas = "1.5.3"
platformdirs = "3.11.0"
plotly-express = "0.4.1"
psutil = "5.9.5"
psycopg2-binary = "2.9.7"
pyarrow = "10.0.1"
pymemcache = "4.0.0"
requests = "2.31.0"
s3fs = "2022.11.0"
scikit-learn = "1.2.2"
seaborn = "0.12.1"
SQLAlchemy = { version = "1.4.46", extras = ["asyncio"] }
sqlparse = "0.4.3"
ultralytics = "8.0.187"
uvicorn = { version = "0.23.2", extras = ["standard"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
